[package]
name = "linux_network"
version = "0.1.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]

[features]
async = ["bytes", "mio", "owning_ref", "tokio"]

[dependencies]
bitflags = "^1.0.3"
boolean_enums = { path = "../boolean_enums" }
bytes = { version = "^0.4.7", optional = true }
error-chain = "^0.11.0"
interfaces = "^0.0.3"
log = "^0.3.8"
mio = { version = "^0.6.12", optional = true }
nix = "^0.9.0"
numeric_enums = { path = "../numeric_enums" }
owning_ref = { version = "^0.3.3", optional = true }
pnet_packet = "^0.21.0"
seccomp = { version = "^0.1.1", optional = true }
tokio = { version = "^0.1.5", optional = true }
