[package]
name = "ping6-datarecv"
version = "0.1.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]

[dependencies]
capabilities = "^0.3.0"
clap = "^2.26.2"
crc16 = "^0.3.4"
env_logger = "^0.4.3"
error-chain = "^0.11.0"
libc = "^0.2.33"
linux_network = { path = "../linux_network" }
log = "^0.3.8"
pnet_packet = "^0.20.0"
