[package]
name = "ping6-datarecv"
version = "0.1.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]

[dependencies]
boolean_enums = { path = "../boolean_enums" }
clap = "^2.26.2"
env_logger = "^0.4.3"
enum_extract = "^0.1.1"
enum-kinds-macros = "^0.1.1"
enum-kinds-traits = "^0.1.0"
error-chain = "^0.11.0"
futures = "^0.1.18"
libc = "^0.2.33"
log = "^0.3.8"
mio = "^0.6.12"
owning_ref = "^0.3.3"
ping6_datacommon = { path = "../ping6_datacommon" }
pnet_packet = "^0.20.0"
seccomp = "^0.1.1"
sliceable_rcref = { path = "../sliceable_rcref" }
state_machine_future = "^0.1.5"
tokio-core = "^0.1.12"
tokio-io = "^0.1.4"
tokio-timer = "^0.1.2"

[dependencies.linux_network]
features = ["async", "seccomp"]
path = "../linux_network"
