[package]
name = "ping6-datarecv"
version = "0.1.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]

[dependencies]
boolean-enums = "^0.3.0"
bytes = "^0.4.7"
clap = "^2.26.2"
env_logger = "^0.4.3"
enum-kinds-macros = "^0.1.1"
enum-kinds-traits = "^0.1.0"
failure = "^0.1.1"
futures = "^0.1.18"
libc = "^0.2.33"
log = "^0.3.8"
mio = "^0.6.12"
owning_ref = "^0.3.3"
ping6_datacommon = { path = "../ping6_datacommon" }
pnet_packet = "^0.21.0"
seccomp = "^0.1.1"
send_box = { path = "../send_box" }
state_machine_future = "^0.1.5"
tokio = "^0.1.5"
tokio-timer = "^0.2.0"

[dependencies.linux_network]
features = ["async", "seccomp"]
path = "../linux_network"
