[package]
name = "ping6-datasend"
version = "0.1.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]

[dependencies]
clap = "^2.26.2"
env_logger = "^0.4.3"
error-chain = "^0.11.0"
linux_network = { path = "../linux_network" }
libc = "^0.2.33"
log = "^0.3.8"
ping6_datacommon = { path = "../ping6_datacommon" }
pnet_packet = "^0.20.0"
