[package]
name = "ping6_datacommon"
version = "0.1.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]

[dependencies]
boolean_enums = { path = "../boolean_enums" }
capabilities = "^0.3.0"
error-chain = "^0.11.0"
futures = "^0.1.18"
linux_network = { path = "../linux_network" }
log = "^0.3.8"
nix = "^0.9.0"
numeric_enums = { path = "../numeric_enums" }
owning_ref = "^0.3.3"
pnet_packet = "^0.21.0"
seahash = "^3.0.5"
seccomp = "^0.1.1"
tokio-timer = "^0.1.2"
