[package]
name = "rsndpproxy"
version = "0.1.0"
authors = ["Dmitry Safonov <dimanss47@dimanss47.net>"]
description = "Simple NDP proxy implementation, written in Rust."

[dependencies]
bitflags = "^1.0.3"
boolean-enums = { features = ['serde'], version = "^0.2.0" }
bytes = "^0.4.7"
capabilities = "^0.3.0"
clap = "^2.26.2"
env_logger = "^0.4.3"
failure = "^0.1.1"
futures = "^0.1.18"
interfaces = "^0.0.3"
ip_network = "^0.2.0"
log = "^0.3.8"
linux_network = { features = ["async"], path = "../linux_network" }
nix = "^0.9.0"
pnet_packet = "^0.21.0"
send_box = { path = "../send_box" }
serde = { version = "^1.0.15", features = ['rc'] }
serde_derive = "^1.0.15"
syslog = "^3.3.0"
tokio = "^0.1.5"
tokio-timer = "^0.2.0"
tokio-signal = "^0.2.1"
toml = "^0.4.5"
users = "^0.6.0"
